<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_app_theme">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="15dp"
        tools:context="com.example.myapp.finalproject.fragments.SignUpFragment">

        <TextView
            android:id="@+id/tvErrors"
            android:text=""
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#c90606"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/username_text_view"
            android:textSize="20sp"
            android:layout_below="@id/tvErrors"/>

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tvUsername"
            android:layout_marginLeft="0dp"
            android:layout_marginStart="58dp"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@+id/tvUsername"
            android:hint="@string/username_hint"
            android:inputType="text"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890_."
            android:padding="15dp" />

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvUsername"
            android:layout_marginTop="15dp"
            android:text="@string/password_text_view"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tvPassword"
            android:layout_marginLeft="0dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@+id/tvPassword"
            android:hint="@string/password_hint"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ!1234567890-.@#$%^*()_+/\|,"
            android:inputType="textPassword"
            android:padding="15dp" />


        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPassword"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/my_buttons_background"
            android:text="@string/sign_up_btn"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPassword"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="60dp"
            android:layout_toRightOf="@+id/btnSignUp"
            android:background="@drawable/my_buttons_background"
            android:text="@string/login_btn"
            android:textColor="#ffffff" />

    </RelativeLayout>
</ScrollView>
